--- a/app/scss/_navbar.scss
+++ b/app/scss/_navbar.scss
@@ -21,7 +21,8 @@
   }
   &__search{
     display: flex;
-    margin-left: 74px;
+    margin-left: 25px;
+    margin-right: 35px;
   }
   &__search__input{  
   border: 1px solid #FFFFFF;
