--- a/app/scss/page-news/_news-page.scss
+++ b/app/scss/page-news/_news-page.scss
@@ -1,12 +1,161 @@
 .page-news{
     .news{
         padding-top: 15px;
+        background-color: #fff;
+        &::before,&::after{
+            display: none;
+        }
+        &__items::after{
+            display: none;
+        }
+        &__items{
+            justify-content: center;
+        }
+        &__item {
+            width: 273px;
+            height: 379px !important;
+            border-radius: 5px;
+            transition: all .3s;
+            padding: 10px;
+            background-color: #fff;
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            &-last-line{
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-end;
+                padding: 20px;
+                position: relative;
+                &::before{
+                    content: "";
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.51) 100%);
+                    // z-index: -1;
+                    left: 0;
+                    top: 0;
+                }
+                & .news__item-title{
+                    font-family: 'Inter';
+                    font-style: normal;
+                    font-weight: 600;
+                    font-size: 14px;
+                    line-height: 18px;
+                    /* or 129% */
+
+                    letter-spacing: -0.01em;
+
+                    color: #FFFFFF;
+
+                }
+                & .news__item-date{
+                    margin-top: 5px;
+                    z-index: 10;
+                    & p{
+                        color: #fff;
+                        font-size: 11px;
+                    }
+                }
+            }
+            &-img{
+                height: auto;
+            }
+            &-title{
+                margin-left: 0;
+            }
+            &-date{
+                margin-left: 0;
+            }
+            &:hover{
+                box-shadow: 0 10px 30px #907A5E;
+            }
+            // .news__item_big
+    
+            &_big {
+                background-size: cover;
+                background-position: center;
+                background-repeat: no-repeat;
+                display: flex;
+                flex-direction: column;
+                width: 579px;
+                height: 379px !important;
+                justify-content: flex-end;
+                padding: 19px 26px;
+                border-radius: 5px;
+                position: relative;
+                &::before{
+                    content: "";
+                    width: 100%;
+                    height: 100%;
+                    position: absolute;
+                    left: 0;
+                    top: 0;
+                    border-radius: 5px;
+                    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 35.42%, #000000 100%);
+                }
+                & .news__item-title{
+                    font-family: 'Inter';
+                    font-style: normal;
+                    font-weight: 900;
+                    font-size: 19px;
+                    line-height: 32px;
+                    /* or 168% */
+
+                    letter-spacing: -0.01em;
+
+                    color: #FFFFFF;
+
+                }
+                & .news__item-date{
+                    position: relative;
+                    z-index: 10;
+                    & p{
+                        color: #fff;
+                    }
+                }
+            }
+            &_big > a{
+                z-index: 10;
+            }              
+            &_big &-title{              
+            font-family: 'Inter';
+            font-style: normal;
+            font-weight: 900;
+            font-size: 19px;
+            line-height: 32px;
+            /* or 168% */
+            z-index: 10;
+            letter-spacing: -0.01em;
+    
+            color: #FFFFFF;
+            }
+            &_big &-date{
+                z-index: 10;
+                display: flex;
+                align-items: center;
+                & p{
+                    font-family: 'Roboto';
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 14px;
+                    line-height: 22px;
+                    /* identical to box height, or 157% */
+    
+                    letter-spacing: -0.01em;
+                    margin-left: 5px;
+                    color: #FFFFFF;
+                }
+            }
+        }
     }
     & .news__item   {
         &:nth-child(11){
             grid-column: 1/3;
         }
     }
+    
     .news__items-mini{
         display: flex;
         flex-direction: column;
@@ -15,7 +164,7 @@
         & .news__item{
             width: 273px;
             margin-bottom: 25px;
-            height: 141px;
+            height: 141px !important;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -46,6 +195,7 @@
 .news__items_2{
     margin-top: 43px;
     display: flex;
+    justify-content: center;
     &_left{
         margin-right: 27px;
         display: flex;
