--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -132,15 +132,22 @@
 
     &__contacts-list {
         width: 70%;
+        & li:nth-child(3) img{
+            margin-right: 29px;
+        }
         & li:nth-child(3) a,& li:nth-child(4) a,& li:nth-child(5) a,& li:nth-child(6) a{
             font-size: 10px;
             line-height: 12px;
+            
         }
         & li:nth-child(2){
             margin-bottom: 10px;
         }
         & li:nth-child(4),& li:nth-child(5),& li:nth-child(6){
             margin-bottom: 10px;
+            & img{
+                margin-right: 32px;
+            }
         }
         & li a{
             display: flex;
