--- a/app/scss/page-screenwriters/_page-screenwriters.scss
+++ b/app/scss/page-screenwriters/_page-screenwriters.scss
@@ -8,8 +8,34 @@
     
         &__inner {
             padding-left: 165px;
+            position: relative;
+            // &::before{
+            //     content: url('../../img/screenwriters-icon-1.svg');
+            //     position: absolute;
+            //     // width: 100%;
+            //     // height: 100%;
+                
+            // }
+            // &::after{
+            //     content: url('../../img/screenwriters-icon-2.svg');
+            //     position: absolute;
+            //     // width: 100%;
+            //     // height: 100%;
+            //     right: 11%;
+            //     top: 50%;
+            // }
         }
-    
+        &-icon{
+            position: absolute;
+        }
+        &-icon-1{
+            left: 20%;
+            top: 4%; 
+        }
+        &-icon-2{
+            right: 11%;
+            top: 50%;
+        }
         // .screenwriters__items
     
         &__items {
