--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -554,7 +554,11 @@ h1, h2, h3, h4, h5, h6, p {
 		height: 150px;
 	}
 	.main-page section.news .news__item{
-		padding: 57px 13px 75px 13px;
+		height: 200px;
+		padding: 19px 15px;
+	}
+	.main-page section.news .news__item-title{
+		line-height: 24px;
 	}
 	.main-page section.news .news__item-title{
 		margin-left: 5px;
@@ -710,7 +714,7 @@ h1, h2, h3, h4, h5, h6, p {
 		font-size: 41px;
 	}
 	.main-page section.news .news__item{
-		padding: 57px 10px 75px 10px;
+		// padding: 57px 10px 75px 10px;
 	}
 	.news__item-mobile{
 		display: block;
