--- a/app/scss/page-main/_news.scss
+++ b/app/scss/page-main/_news.scss
@@ -83,11 +83,26 @@
 
     
     &__item{
-        padding: 62px 15px 75px 15px;
-        background-color: #FFF0DD;
+        padding: 19px 28px;
         position: relative;
-        border-radius: 6px;
-        height: auto !important;
+        height: 379px;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        border: 1px solid #BDBDBD;
+        border-radius: 5px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        .main-page &::before{
+            content: "";
+            background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.43) 99.99%, rgba(0, 0, 0, 0.21) 100%);
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            left: 0;
+            top: 0;
+        }
         &-mobile{
             display: none;
         }
@@ -135,15 +150,16 @@
     &__item-title {
         font-family: 'Inter';
         font-style: normal;
-        font-weight: 600;
-        font-size: 14px;
-        line-height: 18px;
-        /* or 129% */
-        margin-left: 30px;
-        margin-right: 20px;
+        font-weight: 900;
+        font-size: 19px;
+        line-height: 32px;
+        /* or 168% */
+
         letter-spacing: -0.01em;
+
+        color: #FFFFFF;
+
         margin-top: 15px;
-        color: #393939;
         position: relative;
         z-index: 10;
     }
@@ -153,10 +169,12 @@
     // .news__item-date
 
     &__item-date {
-        margin-left: 30px;
+        // margin-left: 30px;
         margin-top: 8px;
         display: flex;
         align-items: center;
+        z-index: 10;
+        position: relative;
         & p{
             font-family: 'Roboto';
             font-style: normal;
@@ -167,7 +185,7 @@
 
             letter-spacing: -0.01em;
             margin-left: 5px;
-            color: #000000;
+            color: #fff;
         }
     }
 
