--- a/app/scss/page-main/_clients.scss
+++ b/app/scss/page-main/_clients.scss
@@ -27,13 +27,17 @@
         
         &-item{
             position: absolute;
-            box-shadow: 0px 0px 17px rgba(22, 22, 22, 0.78), 0px 0px 17px rgba(7, 7, 7, 0.78);
-            border-radius: 50%;
-            background-color: #181818;
-            transition: all 3s;
+            // box-shadow: 0px 0px 17px rgba(22, 22, 22, 0.78), 0px 0px 17px rgba(7, 7, 7, 0.78);
+            // border-radius: 50%;
+            // background-color: #181818;
+            transition: all 4s;
+            // & img{
+            //     width: 100%;
+            //     height: 100%;
+            // }
             &:nth-child(1){
-                width: 5px;
-                height: 5px;
+                // width: 5px;
+                // height: 5px;
                 top: 40%;
                 animation: particles1 3s infinite ease-in-out;
             }
@@ -43,7 +47,7 @@
               animation: particles2 3.2s infinite ease-in-out;
             }
             &:nth-child(3){
-                left: 10%;
+                left:-5%;
                 top: 47%;
                 animation: particles3 3.1s infinite ease-in-out;
             }
@@ -100,18 +104,18 @@
                 left: 50%;
             }
             
-            &:nth-child(2),&:nth-child(3),&:nth-child(4),&:nth-child(5),&:nth-child(6),&:nth-child(7),&:nth-child(8){
-                width: 3px;
-                height: 3px;
-            }
-            &:nth-child(9),&:nth-child(10),&:nth-child(11),&:nth-child(12),&:nth-child(13){
-                width: 5px;
-                height: 5px;
-            }
-            &:nth-child(14){
-                width: 10px;
-                height: 10px;
-            }
+            // &:nth-child(2),&:nth-child(3),&:nth-child(4),&:nth-child(5),&:nth-child(6),&:nth-child(7),&:nth-child(8){
+            //     width: 9px;
+            //     height: 9px;
+            // }
+            // &:nth-child(9),&:nth-child(10),&:nth-child(11),&:nth-child(12),&:nth-child(13){
+            //     width: 23px;
+            //     height: 23px;
+            // }
+            // &:nth-child(14){
+            //     width: 23px;
+            //     height: 23px;
+            // }
         }
     }
     // .clients__info-item
