--- a/app/scss/page-single-actors/_single-actors.scss
+++ b/app/scss/page-single-actors/_single-actors.scss
@@ -25,7 +25,7 @@
             height: 892px;
             z-index: 2;
             & img{
-                border: 1px solid #C9C9C9;
+                // border: 1px solid #C9C9C9;
                 border-radius: 5px;
                 width: 100%;
                 height: 100%;
@@ -44,39 +44,39 @@
             }
             &-particles{
                 position: absolute;
-                background: #181818;
-                border-radius: 50%;
+                // background: #181818;
+                // border-radius: 50%;
                 transition: all 3s;
-                box-shadow: 0px 0px 17px rgba(22, 22, 22, 0.78), 0px 0px 17px rgba(7, 7, 7, 0.78);
+                // box-shadow: 0px 0px 17px rgba(22, 22, 22, 0.78), 0px 0px 17px rgba(7, 7, 7, 0.78);
                 &:nth-child(1){
                     bottom: 22%;
                     left: -12%;
-                    width: 10px;
-                    height: 10px;
+                    // width: 10px;
+                    // height: 10px;
                 }
                 &:nth-child(2){
                     bottom: 6%;
                     left: -22%;
-                    width: 5px;
-                    height: 5px;
+                    // width: 5px;
+                    // height: 5px;
                 }
                 &:nth-child(3){
                     bottom: -4%;
                     left: 12%;
-                    width: 10px;
-                    height: 10px;
+                    // width: 10px;
+                    // height: 10px;
                 }
                 &:nth-child(4){
                     top: 34%;
-                    width: 10px;
+                    // width: 10px;
                     right: -8%;
-                    height: 10px;
+                    // height: 10px;
                 }
                 &:nth-child(5){
                     top: 18%;
-                    width: 5px;
+                    // width: 5px;
                     right: -15%;
-                    height: 5px;
+                    // height: 5px;
                 }
             }
         }
