edit page style

--- a/app/scss/page-actors/_page-actors.scss
+++ b/app/scss/page-actors/_page-actors.scss
@@ -1,4 +1,8 @@
 .page-actors{
+    .start::before{
+        background: linear-gradient(180.37deg, rgba(0, 0, 0, 0) 26.05%, rgba(109, 84, 59, 0.32) 58.26%, #CDC7C2 99.68%),
+    }
+    background-color: #CDC7C2;
     .primary-title{
         padding-left: 75px;
     }
