--- a/app/scss/page-main/_news.scss
+++ b/app/scss/page-main/_news.scss
@@ -228,3 +228,33 @@
     }
 }
 
+.main-page .news{
+    &__item-img{
+        width: 100%;
+        height: 217px;
+        & img{
+            width: 100%;
+            border-radius: 5px;
+            height: 100%;
+        }
+    }
+    &__item{
+        padding: 0;
+        justify-content: start;
+        border-radius: 5px;
+        border: none;
+        &::before{
+            border-radius: 5px;
+        }
+        &-title{
+            padding-left: 25px;
+            font-size: 15px;
+            line-height: 26px;
+        }
+        &-date{
+            padding-left: 25px; 
+            margin-top: auto;
+            margin-bottom: 20px;
+        }
+    }
+}
